@@ -28,6 +28,13 @@ private template 'header' => sub {
         };
         outs_raw
             '<!--[if IE]><link rel="stylesheet" href="/static/css/ie.css" type="text/css" media="screen, projection"><![endif]-->';
+        link {
+            attr {
+                rel  => 'icon',
+                href => '/static/images/favicon.png',
+                type => 'image/png',
+            }
+        };
 
         meta { attr { generator => 'CPAN::Mini::Webserver' } };
     }
@@ -747,6 +754,22 @@ M=6%B8&0``D9F9A86%C9.55$S<$3?V.S!D;89YL.;^0;(I?K)^57)\0G%O0<@
 M.7W%BE4K%FZ#&^G)Q,3$"`10@UG8>!3`!>GEA<O7+EUT#>[.9<17%$W<[)P\
 MO+P\W-Q@@E-$L>X&A77/S5UKYDUN+,E)B@QTMM"1$Q7HQ%U/`@`VR1C"JK@]
 -VP````!)14Y$KD)@@@``
+`
+end
+|;
+    my ( $string, $filename, $mode ) = uudecode($uuencoded);
+    outs_raw $string;
+};
+
+template 'images_favicon' => sub {
+    my $self      = shift;
+    my $uuencoded = q|begin 644 favicon.png
+MB5!.1PT*&@H````-24A$4@```!`````0!`,```#MW>)2`````7-21T(`KLX<
+MZ0```#!03%1%!P<''1T=*"@H.SL[2TM+65E9965E>GIZCHZ.FYN;JZNKO;V]
+MR\O+V=G9[.SL____4)LDI@```'=)1$%4"-=C^`\%#$#\SQ;*>*;>#V;\FZ1V
+M'\QX8]0X'\3X=\PX21/$^!/$[B*X'\BXJB!R1T'W/\._0*:X_YN8WS,\%5#_
+M__^7@!]#(!-0R_^%;`P-:B7&+J[!X@Q_#!B`0/(^P_\`$(,-J/UZ68B1H!_8
+84C```)$<4.!O-G[F`````$E%3D2N0F""
 `
 end
 |;
