@@ -4,6 +4,7 @@ Revision history for Perl module CPAN::Mini::Webserver:
      - mention the subversion repository and the mailing list
      - require Template::Declare 0.29 (spotted by evdb)
      - require HTTP::Server::Simple 0.34 (spotted by ranguard)
+     - added favicon
 
 0.33 Fri Aug  8 08:00:12 BST 2008
      - require at least CPAN::Mini 0.565 as we need CPAN::Mini::App
